lidarr/service.yml
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  labels:
    app: lidarr
spec:
  ports:
  - name: http
    port: 8686
  selector:
    app: lidarr
